--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -15,3 +15,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+  
+.MainInterface-content-4 {
+  padding: 0px;
+}
