Add logo and more styles

--- a/src/styles/MainInterface.css
+++ b/src/styles/MainInterface.css
@@ -1,6 +1,8 @@
   .elenaLogo {
       margin: 0 auto;
       padding: 20px 20px;
+      height: 15.27%;
+      width: 50%;
       color: #ffffff;
   }
 
