--- a/src/styles/MainInterface.css
+++ b/src/styles/MainInterface.css
@@ -1,9 +1,9 @@
   .elenaLogo {
       margin: 0 auto;
       padding: 20px 20px;
-      height: 15.27%;
-      width: 50%;
-      color: #ffffff;
+      height: 8.27%;
+      /* width: 52%; */
+      /* color: #ffffff; */
   }
 
   @keyframes App-logo-spin {
